# labs

./: .gitignore  CMakeLists.txt  Doxyfile
lab1/: CMakeLists.txt  Doxyfile  README.MD  adjlist.h  data.h  environment.h  environment_tests.h  graph.h  graph_tests.h  main.cpp  main_tests.cpp  matrix.h  (+4 more)
lab2/: CMakeLists.txt  README.MD  datamanager.cpp  datamanager.h  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.cpp  note.h  noteeditor.cpp  noteeditor.h  noteeditor.ui  notewidget.cpp  notewidget.h  resources.qrc  schema.h  schemaeditor.cpp  schemaeditor.h  schemaeditor.ui  schemamanager.cpp  schemamanager.h  schemamanager.ui  tageditor.cpp  tageditor.h
lab2/docs/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8_m_d.html  annotated.html  annotated_dup.js  class_logger.html  class_note.html  class_note_editor-members.html  class_note_widget-members.html  class_note_widget.js  class_schema-members.html  class_schema.html  class_schema_editor-members.html  class_schema_editor.html  class_schema_editor.js  class_schema_manager.js  class_tag_editor.html  class_tag_editor.js  class_test_models-members.html  class_test_models.html  class_ui_1_1_main_window-members.html  class_ui_1_1_main_window.html  class_ui_1_1_note_editor-members.html  class_ui_1_1_note_widget-members.html  class_ui_1_1_schema_editor-members.html  class_ui_1_1_schema_manager-members.html  class_ui_1_1_schema_manager.html  class_ui_1_1_tag_editor-members.html  class_ui_1_1_tag_editor.html  class_ui___note_editor-members.html  class_ui___note_editor.js  class_ui___note_widget.js  class_ui___schema_editor.html  class_ui___schema_editor.js  class_ui___schema_manager.html  class_ui___schema_manager.js  class_ui___tag_editor.html  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  (+309 more)
lab2/docs/html/: annotated.html  class_data_manager-members.html  class_main_window-members.html  class_main_window.html  class_note-members.html  class_note.js  class_note_editor.html  class_note_editor.js  class_note_widget.html  class_schema_manager-members.html  class_schema_manager.html  class_tag_editor-members.html  class_test_data_manager-members.html  class_test_data_manager.html  class_test_i_o-members.html  class_test_i_o.html  class_ui_1_1_note_editor.html  class_ui_1_1_note_widget.html  class_ui_1_1_schema_editor.html  class_ui___main_window-members.html  class_ui___main_window.html  class_ui___main_window.js  class_ui___note_editor.html  class_ui___note_widget-members.html  class_ui___note_widget.html  class_ui___schema_editor-members.html  class_ui___schema_manager-members.html  class_ui___tag_editor-members.html  class_ui___tag_editor.js  classbasic__json-members.html  classbasic__json.html  classbasic__json.js  classdetail_1_1binary__reader.js  classdetail_1_1binary__writer.js  classdetail_1_1exception-members.html  classdetail_1_1exception.html  classdetail_1_1file__input__adapter.html  classdetail_1_1file__input__adapter.js  classdetail_1_1input__stream__adapter.html  classdetail_1_1input__stream__adapter.js  (+317 more)
lab2/docs/html/search/: all_27.js  all_2a.js  all_a.js  all_d.js  classes_10.js  classes_b.js  defines_0.js  defines_7.js  defines_b.js  defines_d.js  enums_5.js  enumvalues_a.js  files_5.js  files_9.js  functions_10.js  functions_11.js  functions_12.js  functions_14.js  functions_3.js  functions_6.js  functions_a.js  functions_c.js  functions_f.js  pages_0.js  pages_1.js  pages_5.js  pages_6.js  pages_a.js  pages_c.js  searchdata.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_8.js  typedefs_9.js  typedefs_b.js  typedefs_f.js  variables_0.js  variables_1.js  (+9 more)
lab2/docs/search/: all_10.js  all_12.js  all_13.js  all_1d.js  all_1e.js  all_1f.js  all_24.js  all_2b.js  all_2d.js  all_3.js  all_5.js  all_6.js  all_9.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_11.js  classes_12.js  classes_4.js  classes_6.js  classes_c.js  classes_f.js  defines_a.js  defines_c.js  files_2.js  files_4.js  files_5.js  files_7.js  files_8.js  functions_0.js  functions_13.js  functions_16.js  functions_17.js  functions_2.js  functions_5.js  functions_7.js  functions_b.js  pages_0.js  pages_14.js  (+24 more)
lab2/i18n/: lab2_en_US.qm  lab2_en_US.ts
lab2/tests/: test_datamanager.h  test_io.h  test_models.h
lab3/: CMakeLists.txt  Doxyfile  README.MD  datamanager.h  main.cpp  mainwindow.cpp  mainwindow.ui  note.cpp  noteeditor.h  notewidget.cpp  notewidget.h  resources.qrc  schema.cpp  schemamanager.cpp  settingsdialog.cpp  settingsdialog.ui
lab3/benchmarks/: benchmark_datamanager.h  benchmark_json.h  benchmark_main.cpp  benchmark_sorting.h  nanobench.cpp
lab3/docs/: annotated_dup.js  class_data_manager.html  class_data_manager.js  class_main_window.js  class_note_editor.html  class_note_editor.js  class_schema.js  classes.html  datamanager_8h.html  datamanager_8h_source.html  doxygen_crawl.html  functions_func.html  functions_vars.html  globals_type.html  hierarchy.html  hierarchy.js  logger_8h.html  main_8cpp.html  mainwindow_8cpp.html  md__r_e_a_d_m_e.html  note_8h.html  noteeditor_8cpp.html  schema_8h.js  schemamanager_8cpp.html  tageditor_8h_source.html
lab3/docs/search/: all_11.js  all_14.js  all_17.js  all_23.js  all_b.js  all_e.js  functions_8.js  functions_d.js  pages_12.js  pages_a.js  pages_d.js  searchdata.js  typedefs_0.js  variables_0.js
lab3/i18n/: lab3_en_US.ts
lab3/src/core/: datamanager.cpp  datamanager.h  note.cpp  note.h  schema.h
lab3/src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  noteeditor.cpp  noteeditor.h  noteeditor.ui  notewidget.cpp  notewidget.ui  schemaeditor.cpp  schemaeditor.h  schemaeditor.ui  schemamanager.h  schemamanager.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  statisticsdialog.cpp  statisticsdialog.h  statisticsdialog.ui  tageditor.cpp  tageditor.h  tageditor.ui
lab3/src/utils/: logger.cpp  logger.h
lab3/styles/: dark.qss  light.qss
lab3/tests/: test_datamanager.h  test_io.h  test_models.h  tests_main.cpp
(+175 files in other folders)
